# TouchController-Monorepo

./: .gitignore  BUILD.bazel  MODULE.bazel  NEWS-en.md  NEWS-zh.md  README.md  gradle.properties  maven_install.json  neoforge_pin.txt  neoform_pin.txt  release.sh  settings.gradle.kts
.github/workflows/: build.yml
armorstand/: BUILD.bazel
blazerod/: BUILD.bazel
combine-ui/: build.gradle.kts
combine/backend/swing/: BUILD.bazel  SwingCanvas.kt  SwingScreenFactory.kt  SwingTextMeasurer.kt
combine/core/animation/: BUILD.bazel
combine/core/data/: BUILD.bazel
combine/core/input/focus/: BUILD.bazel  FocusManager.kt
combine/core/input/interaction/: BUILD.bazel
combine/core/input/text/: BUILD.bazel  ClipboardHandler.kt  InputHandler.kt  TextInputReceiver.kt  TextInputState.kt  TextRange.kt
combine/core/item/: BUILD.bazel  DataComponentType.kt  Item.kt  ItemCanvas.kt  ItemStack.kt
combine/core/layout/: BUILD.bazel  Layout.kt
combine/core/layout/constraints/: BUILD.bazel  Constraints.kt
combine/core/layout/measure/: BUILD.bazel  MeasurePolicy.kt
combine/core/modifier/: BUILD.bazel
combine/core/modifier/focus/: BUILD.bazel  FocusRequester.kt  FocusStateListenerModifierNode.kt  Focusable.kt
combine/core/modifier/key/: BUILD.bazel  KeyEvent.kt  KeyInputModifierNode.kt
combine/core/modifier/placement/: Anchor.kt  BUILD.bazel  Fill.kt  IntrinsicSize.kt  MaxSize.kt  MinSize.kt  Offset.kt  OnPlaced.kt  Padding.kt  PlaceListeningModifierNode.kt  Size.kt
combine/core/modifier/pointer/: BUILD.bazel  Click.kt  Draggable.kt  Hoverable.kt  Pointer.kt  PointerInputModifierNode.kt  PressConsumer.kt
combine/core/modifier/scroll/: BUILD.bazel  VerticalScroll.kt
combine/core/node/: AttachListenerModifierNode.kt  BUILD.bazel  CombineOwner.kt  LayoutNode.kt  NodeRenderer.kt  WrapperModifierNode.kt
combine/core/paint/: BUILD.bazel  Canvas.kt  Drawable.kt  Texture.kt
combine/core/screen/: BUILD.bazel  DismissHandler.kt
combine/core/sound/: BUILD.bazel
combine/core/widget/: BUILD.bazel  BaseText.kt  Canvas.kt  Dialog.kt  Popup.kt  Texture.kt
combine/core/widget/layout/: BUILD.bazel  Box.kt  Column.kt  FlowRow.kt  Row.kt  Spacer.kt
combine/data/: BUILD.bazel  Offset.kt  Rect.kt  Size.kt
combine/style/: BUILD.bazel  DrawableSet.kt  TextStyle.kt  TextureSet.kt
combine/theme/base/: BUILD.bazel  SimpleTheme.kt  Theme.kt
combine/theme/blackstone/: BUILD.bazel
combine/theme/blackstone/texture/: BUILD.bazel
combine/widget/: AlertDialog.kt  BUILD.bazel  Button.kt  CheckBox.kt  CheckBoxButton.kt  ColorPicker.kt  DropDownMenu.kt  EditText.kt  FullScreenDialog.kt  Icon.kt  IconButton.kt  Radio.kt  Select.kt  Slider.kt  Switch.kt  Text.kt  TextButton.kt
combine/widget/item/: BUILD.bazel  Item.kt  ItemButton.kt  ItemGrid.kt
gradle/: libs.versions.toml
mod/: BUILD.bazel
mod/1.12.2/forge-1.12.2/: build.gradle.kts  gradle.properties
mod/1.16.5/fabric-1.16.5/: build.gradle.kts  gradle.properties
mod/1.16.5/forge-1.16.5/: gradle.properties
mod/1.20.1/common-1.20.1/: gradle.properties
mod/1.20.1/fabric-1.20.1/: build.gradle.kts  gradle.properties
mod/1.20.1/forge-1.20.1/: build.gradle.kts  gradle.properties
mod/1.20.4/common-1.20.4/: gradle.properties
mod/1.20.4/fabric-1.20.4/: build.gradle.kts  gradle.properties
mod/1.20.4/forge-1.20.4/: build.gradle.kts  gradle.properties
mod/1.20.4/neoforge-1.20.4/: build.gradle.kts  gradle.properties
mod/1.20.6/common-1.20.6/: gradle.properties
mod/1.20.6/fabric-1.20.6/: build.gradle.kts  gradle.properties
mod/1.20.6/forge-1.20.6/: build.gradle.kts  gradle.properties
mod/1.20.6/neoforge-1.20.6/: build.gradle.kts  gradle.properties
mod/1.21.1/common-1.21.1/: build.gradle.kts  gradle.properties
mod/1.21.1/fabric-1.21.1/: build.gradle.kts  gradle.properties
mod/1.21.1/forge-1.21.1/: build.gradle.kts  gradle.properties
mod/1.21.1/neoforge-1.21.1/: build.gradle.kts  gradle.properties
mod/1.21.3/common-1.21.3/: gradle.properties
mod/1.21.3/fabric-1.21.3/: build.gradle.kts  gradle.properties
mod/1.21.3/forge-1.21.3/: build.gradle.kts  gradle.properties
mod/1.21.3/neoforge-1.21.3/: build.gradle.kts  gradle.properties
mod/1.21.4/common-1.21.4/: gradle.properties
mod/1.21.4/fabric-1.21.4/: build.gradle.kts  gradle.properties
mod/1.21.4/forge-1.21.4/: build.gradle.kts  gradle.properties
mod/1.21.4/neoforge-1.21.4/: build.gradle.kts  gradle.properties
mod/1.21.5/common-1.21.5/: gradle.properties
mod/1.21.5/fabric-1.21.5/: gradle.properties
mod/1.21.6/common-1.21.6/: gradle.properties
mod/1.21.6/fabric-1.21.6/: build.gradle.kts  gradle.properties
mod/1.21.6/forge-1.21.6/: build.gradle.kts
mod/1.21.6/neoforge-1.21.6/: build.gradle.kts
mod/1.21.7/fabric-1.21.7/: build.gradle.kts  gradle.properties
mod/1.21.7/forge-1.21.7/: build.gradle.kts  gradle.properties
mod/1.21.7/neoforge-1.21.7/: build.gradle.kts  gradle.properties
mod/1.21.8/fabric-1.21.8/: build.gradle.kts  gradle.properties
mod/1.21.8/forge-1.21.8/: build.gradle.kts  gradle.properties
mod/common/: build.gradle.kts
mod/common-1.21-1.21.1/: build.gradle.kts
mod/common-1.21-1.21.4/: build.gradle.kts
mod/common-1.21-1.21.5/: build.gradle.kts
mod/common-1.21.3-1.21.5/: build.gradle.kts
mod/common-1.21.6-1.21.7/: build.gradle.kts
mod/common-1.21.6-1.21.8/: build.gradle.kts
mod/common-1.21.x/: build.gradle.kts
mod/common-fabric/: rules.pro
mod/common-forge/: rules.pro
mod/common-neoforge/: rules.pro
mod/resources/: build.gradle.kts
module/: minecraft.MODULE.bazel  neoforge.MODULE.bazel
private/: maven_coordinate.bzl
proxy-client/: build.gradle.kts
proxy-client-android/: build.gradle.kts
proxy-common/src/: protocol.hpp
proxy-windows/: CMakeLists.txt  build.gradle.kts
proxy-windows/src/: input.cpp
repo/: minecraft.bzl  neoforge.bzl  neoform.bzl
repo/neoform/pin_generator/: BUILD.bazel
repo/neoform/rule/split_resources/: BUILD.bazel
rule/combine/: library.bzl  texture.bzl
rule/tiny_remapper_worker/: TinyRemapperWorker.java
rule/worker_api/: BUILD.bazel  Worker.java
(+417 files in other folders)
