load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "worker_api",
    srcs = [
        "WorkRequest.java",
        "WorkResponse.java",
        "Worker.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)
