load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "item",
    srcs = glob(["*.kt"]),
    visibility = ["//combine:__subpackages__"],
    deps = [
        "//:compose",
        "//:kotlin_serialization",
        "//combine/core/data",
        "//combine/core/paint",
        "//combine/data",
        "@maven//:org_jetbrains_kotlinx_kotlinx_collections_immutable_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
    ],
)
