load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "node",
    srcs = glob(["*.kt"]),
    visibility = ["//combine:__subpackages__"],
    deps = [
        "//:compose",
        "//:kotlin_serialization",
        "//combine/core/animation",
        "//combine/core/data",
        "//combine/core/input/focus",
        "//combine/core/input/key",
        "//combine/core/input/pointer",
        "//combine/core/input/text",
        "//combine/core/layout/constraints",
        "//combine/core/layout/measure",
        "//combine/core/modifier",
        "//combine/core/paint",
        "//combine/data",
        "@maven//:org_jetbrains_kotlinx_kotlinx_collections_immutable_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
        "@maven//:org_mini2Dx_universal_tween_engine",
    ],
)
