load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "paint",
    srcs = glob(["*.kt"]),
    visibility = ["//combine:__subpackages__"],
    deps = [
        "//:kotlin_serialization",
        "//combine/core/data",
        "//combine/data",
        "@maven//:androidx_compose_runtime_runtime",
        "@maven//:org_jetbrains_kotlinx_kotlinx_collections_immutable_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
    ],
)
