load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//rule/combine:library.bzl", "kt_texture_lib")

kt_texture_lib(
    name = "texture_lib",
    dep = "//combine/theme/blackstone/texture",
)

kt_jvm_library(
    name = "texture",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        ":texture_lib",
        "//combine/core/paint",
        "//combine/style",
        "//combine/theme/base",
    ],
)
