load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "text",
    srcs = glob(["*.kt"]),
    visibility = ["//combine:__subpackages__"],
    deps = [
        "//combine/data",
        "@maven//:androidx_compose_runtime_runtime",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)
