load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "measure",
    srcs = glob(["*.kt"]),
    visibility = ["//combine:__subpackages__"],
    deps = [
        "//combine/core/layout/constraints",
        "//combine/data",
        "@maven//:androidx_compose_runtime_runtime",
    ],
)
