load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "key",
    srcs = glob(["*.kt"]),
    visibility = ["//combine:__subpackages__"],
    deps = [
        "//combine/core/input/focus",
        "//combine/core/input/key",
        "//combine/core/input/pointer",
        "//combine/core/input/text",
        "//combine/core/modifier",
        "//combine/core/modifier/pointer",
        "//combine/core/node",
    ],
)
