load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "split_resources",
    srcs = ["SplitResourcesFromClasses.java"],
    main_class = "net.neoforged.neoform.runtime.tools.SplitResourcesFromClasses",
    visibility = ["//visibility:public"],
    deps = ["@maven//:net_neoforged_srgutils"],
)
